--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cattaruzza Alexis - Développeur fullstack</title>
+    
+    <!-- Preload critical hobby images for instant display -->
+    <link rel="preload" as="image" href="/images/formule1.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/padel.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/travel.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/running.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/devIt.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/techRead.jpg" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/cooking.jpg" fetchpriority="high" />
   </head>
   <body>
     <div id="root"></div>
